# surface_robotics_mockups_description

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
4040_hatch/: CMakeLists.txt  package.xml
4040_hatch/launch/: view.launch.py
4040_hatch/rviz/: visualization.rviz
4040_hatch/urdf/: hatch_face.urdf.xacro  hatch_face.xacro
4060_hatch/: CMakeLists.txt  package.xml
4060_hatch/launch/: view.launch.py
bench/: CMakeLists.txt  package.xml
bench/launch/: view.launch.py
bench/rviz/: visualization.rviz
bench/urdf/: bench_seat.urdf.xacro
clr_trainer_hatch_offsets/: launch_common.py
combined_mocks/: CMakeLists.txt  package.xml
combined_mocks/launch/: view.launch.py
combined_mocks/rviz/: visualization.rviz
combined_mocks/urdf/: combined_mocks.urdf.xacro
config/: bench_transforms.yaml  hatch_handle_transforms.yaml  hatch_internal_transforms.yaml  hatch_wheel_transforms.yaml  ivr_evr_transforms.yaml
config/ivr_evr_transforms/: hatch_4060_transforms.yaml  intermediate_transforms.yaml
config/trainer_hatch_transforms/: hatch_4040_transforms.yaml
config/trainer_multi_hatch_transforms/: bench_transforms.yaml  hatch_4040_transforms.yaml  hatch_4060_transforms.yaml  intermediate_transforms.yaml
ctb/: CMakeLists.txt  package.xml
ctb/meshes/: ctb_body.stl  ctb_handle.stl
ctb/urdf/: ctb.urdf  ctb_macro.xacro
express_rack/: CMakeLists.txt  package.xml
express_rack/meshes/: express_rack_mesh.stl
express_rack/urdf/: express_rack.xacro
hatch_4040/: CMakeLists.txt  package.xml
hatch_4040/launch/: view.launch.py
hatch_4040/meshes/collision/: crank_wheel.stl  hatch_4040_collision.stl  hatch_4040_face.stl  hatch_4040_frame_no_latches.stl
hatch_4040/meshes/visual/: crank_handle.stl  grab_handle.stl  hatch_4040_face.stl  hatch_4040_frame.stl
hatch_4040/rviz/: visualization.rviz
hatch_4040/scripts/: hatch4040_manager.py  hatch4040_simple_publisher.py  mockup_state_manager.py
hatch_4040/urdf/: crank_wheel.xacro  grab_handle.xacro  hatch_4040.urdf.xacro  hatch_4040.xacro
hatch_4060/: CMakeLists.txt  package.xml
hatch_4060/launch/: view.launch.py
hatch_4060/rviz/: visualization.rviz
hatch_4060/urdf/: hatch_4060.urdf.xacro  hatch_4060.xacro  mocks.xacro
hatch_accessories/: CMakeLists.txt  package.xml
hatch_frame/: CMakeLists.txt  package.xml
hatch_xl/: CMakeLists.txt  package.xml
hatch_xl/launch/: view.launch.py
hatch_xl/meshes/visual/: mc_hatch_xl_face_mirror.stl  mc_hatch_xl_frame_mirror.stl  mc_hatch_xl_frame_simple_mirror.stl
hatch_xl/rviz/: config.rviz
hatch_xl/urdf/: hatch_xl.urdf.xacro  hatch_xl.xacro
launch/: bench_transform_publisher.launch.py  hatch_handle_transform_publisher.launch.py  hatch_internal_transform_publisher.launch.py  hatch_wheel_transform_publisher.launch.py  intermediate_transform_publisher.launch.py  ivr_evr_publisher.launch.py  ivr_evr_transform_publisher.launch.py  test_namespace_merlin.launch.py  trainer_hatch_publisher.launch.py  trainer_multi_hatch_publisher.launch.py  transform_publisher.launch.py  view_merlin_mockup.launch.py
long_bench/: CMakeLists.txt  package.xml
long_bench/urdf/: long_bench.xacro
merlin_mockup_description/: CITATION.cff  README.md  package.xml
mockups_launch_common/: CMakeLists.txt  README.md  package.xml
mockups_launch_common/config/: example_transforms.yaml
mockups_launch_common/launch/: example_static_transform.launch.py
mockups_launch_common/mockups_launch_common/: static_transformer.py  yaml_loader.py
mockups_launch_common/scripts/: multi_transform_static_publisher.py
mockups_launch_common/tests/: test_yaml_loader.py
mockups_launch_common/urdf/: mockups_launch_common_colors.xacro
mockups_offsets/: CMakeLists.txt  README.md  package.xml
mockups_offsets/config/ivr_evr_transforms/: bench_transforms.yaml  hatch_4060_transforms.yaml  intermediate_transforms.yaml
mockups_offsets/config/trainer_hatch_transforms/: hatch_4040_transforms.yaml
mockups_offsets/config/trainer_multi_hatch_transforms/: bench_transforms.yaml  hatch_4040_transforms.yaml  hatch_4060_transforms.yaml  intermediate_transforms.yaml
mockups_offsets/launch/: ivr_evr_publisher.launch.py  trainer_hatch_publisher.launch.py  trainer_multi_hatch_publisher.launch.py
rough_mocks/: CMakeLists.txt  package.xml
rviz/: view_robot.rviz
scripts/: multi_transform_static_publisher.py
trainer/: CMakeLists.txt  package.xml
trainer/launch/: view.launch.py  view_bench.launch.py  view_cubby.launch.py  view_front.launch.py  view_front_left_face.launch copy.py  view_front_right_face.launch.py  view_side.launch.py  view_trainer.launch.py
trainer/meshes/collision/: cabinet_door_1.stl  cabinet_door_2.stl  cabinet_door_3.stl  cabinet_door_4.stl  cubby.stl  cubby_1.stl  drawer_1_face.stl  drawer_2_face.stl  front_right_face.stl  ivr_tasktrainer_frame.stl  push_latch_handle.stl  push_latch_housing.stl  recessed_latch_handle.stl  recessed_latch_housing.stl  round_latch_handle.stl  side_face_plate.stl  side_top_face.stl
trainer/meshes/visual/: bench_back.stl  bench_front.stl  bench_left.stl  bench_lid.dae  bench_lid.stl  bench_right.stl  cubby.stl  cubby_2.stl  front_left_face.stl  grab_handle.stl  imetro_bench_lid.dae  ivr_tasktrainer_frame.stl  paddle_latch_handle.stl  paddle_latch_housing.stl  push_latch_button.stl  round_latch_face.stl  side_bottom_face.stl  side_face_plate.stl
trainer/rviz/: visualization.rviz
trainer/scripts/: trainer_manager.py  trainer_simple_publisher.py
trainer/urdf/: bench_seat.urdf.xacro  bench_seat.xacro  ceiling.xacro  colors.xacro  mocks.xacro  trainer.urdf.xacro  trainer_cubby.urdf.xacro  trainer_cubby.xacro  trainer_cubby_1.urdf.xacro  trainer_cubby_1.xacro  trainer_cubby_2.urdf.xacro  trainer_cubby_2.xacro  trainer_frame.urdf.xacro  trainer_frame.xacro  trainer_front.urdf.xacro  trainer_front.xacro  trainer_front_left_face.urdf.xacro  trainer_front_left_face.xacro  trainer_front_right_face.urdf.xacro  trainer_front_right_face.xacro  trainer_side.urdf.xacro  trainer_side.xacro
urdf/: merlin_mockup.urdf.xacro  merlin_mockup.xacro
(+53 files in other folders)
