<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_trainer_hatch_offsets</name>
  <version>0.1.0</version>
  <description>
     A package to publish static transform publishers for the surface robotics mockups
  </description>
  <maintainer email="nathan.b.dunkelberger@nasa.gov">Nathan Dunkelberger</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
