<?xml version="1.0"?>
<package format="3">
  <name>hatch_4040</name>
  <version>0.0.1</version>
  <description>
    Meshes and URDFs for the 40x40 hatch.
  </description>
  <maintainer email="andrew.p.sharp@nasa.gov">Andrew Sharp</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>hatch_frame</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
