<?xml version="1.0"?>
<package format="3">
  <name>hatch_xl</name>
  <version>1.0.0</version>
  <description>
    Meshes and URDFs for the XL hatch.
  </description>

  <maintainer email="michael.e.tobia@nasa.gov">Mike Tobia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>hatch_accessories</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
