<?xml version="1.0"?>
<package format="3">
  <name>long_bench</name>
  <version>1.0.0</version>

  <description>Long bench description</description>

  <maintainer email="michael.e.tobia@nasa.gov">Mike Tobia</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
